--- a/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
+++ b/src/app/service-page/components/service-page-another-services/service-page-another-services.component.scss
@@ -29,6 +29,7 @@
       border-radius: 3px;
       position: relative;
       overflow: hidden;
+      cursor: pointer;
       // background-image: url(/assets/images/preview.png);
       // background-repeat: no-repeat;
       // background-size: cover;
