service-page:: compleated // setting-page - srart

--- a/src/app/service-page/components/service-page/service-page.component.html
+++ b/src/app/service-page/components/service-page/service-page.component.html
@@ -222,6 +222,6 @@
       </div>
     </div>
     <app-service-page-another-services [offerData]="offerData" *ngIf="offerData"></app-service-page-another-services>
-    <app-service-page-earlier-viewed [offerData]="offerData" *ngIf="offerData"></app-service-page-earlier-viewed>
+    <app-service-page-earlier-viewed [viewedOffers]="viewedOffers" *ngIf="viewedOffers"></app-service-page-earlier-viewed>
   </div>
 </div>
