--- a/src/app/dashboard-page/dashboard-page.component.html
+++ b/src/app/dashboard-page/dashboard-page.component.html
@@ -37,6 +37,7 @@
       <nav>
         <a [routerLink]="'/dashboard' | localize">главная</a>
         <a [routerLink]="'/dashboard/my-services' | localize" >услуги</a>
+        <a [routerLink]="'/dashboard/settings' | localize" >настройки</a>
       </nav>
     </section>
   </div>
