--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.html
@@ -11,9 +11,9 @@
     </div>
   </div>
   <div class="step-detail">
-    <!-- <app-first-step-service-creation *ngIf="userService && currentStep === 1" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-first-step-service-creation>
-    <app-second-step-creation *ngIf="userService && currentStep === 2" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-second-step-creation>
-     -->
+    <app-first-step-service-creation *ngIf="userService " [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-first-step-service-creation>
+    <app-second-step-creation *ngIf="userService && userService.currentStep === 2" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-second-step-creation>
+
     <app-third-step-creation *ngIf="userService" [userService]="userService"></app-third-step-creation>
     <!--  <div>3</div>
     <div>4</div>
