--- a/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.html
+++ b/src/app/service-page/components/service-page-earlier-viewed/service-page-earlier-viewed.component.html
@@ -1,131 +1,38 @@
-<!-- <section class="early-viewed">
+<section class="early-viewed">
   <h4 class="section-title">
     Похожие услуги создания сайтов
   </h4>
-  <div class="item-list" *ngIf="offerData">
-    <div class="card" >
-      <div class="card-preview__bg">
-        <img class="card-preview"  [src]="'https://www.thecubetest.site/Backend/storage/app/' + offerData.mainImage">
-      </div>
-      <div class="card-description">
+  <div class="item-list" *ngIf="viewedOffers">
 
-        <div class="card-description__top">
-          <div class="card-description__ava"><img *ngIf="offerData.user.avatar" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offerData.user.avatar" alt="avatar">
+      <div class="card" *ngFor="let offer of viewedOffers">
+        <div class="card-preview__bg">
+          <img class="card-preview" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.mainImage">
+        </div>
+        <div class="card-description">
+
+          <div class="card-description__top">
+            <div class="card-description__ava" (click)="openOffer(offer.id)"><img *ngIf="offer.user.avatar" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offer.user.avatar" alt="avatar"></div>
+            <div>
+              <span class="card-description__name" >{{offer.user.name}} {{offer.user.surname}}</span>
+              <div class="card-description__skill">{{offer.user.rank_id}}</div>
+            </div>
           </div>
-          <div>
-            <span class="card-description__name" >{{offerData.user.name}} {{offerData.user.surname}}</span>
-            <div class="card-description__skill">{{offerData.user.rank_id}}</div>
+          <p class="card-description__about">{{offer.description}}</p>
+          <div class="card-description__bottom">
+            <div class="card-description__level">{{offer.raiting}}</div>
+            <div class="card-description__comments"><a>({{offer.comments_count}} отзывов)</a></div>
+          </div>
+
+        </div>
+        <div class="card-bottom">
+          <div class="card-bottom__like"></div>
+          <div class="card-bottom__price">
+            начиная от
+            <span>{{offer.minPrice}}</span>
           </div>
         </div>
-
-        <p class="card-description__about">{{offerData.description}}</p>
-        <div class="card-description__bottom">
-          <div class="card-description__level">{{offerData.rating}}</div>
-          <div class="card-description__comments"><a>({{offerData.comments_count}} отзывов)</a></div>
-        </div>
-
-      </div>
-      <div class="card-bottom">
-        <div class="card-bottom__like"></div>
-        <div class="card-bottom__price">
-          начиная от
-          <span>500 ₴ </span>
-        </div>
-      </div>
 
     </div>
-    <div class="card" >
-      <div class="card-preview__bg">
-        <img class="card-preview"  [src]="'https://www.thecubetest.site/Backend/storage/app/' + offerData.mainImage">
-      </div>
-      <div class="card-description">
 
-        <div class="card-description__top">
-          <div class="card-description__ava"><img *ngIf="offerData.user.avatar" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offerData.user.avatar" alt="avatar">
-          </div>
-          <div>
-            <span class="card-description__name" >{{offerData.user.name}} {{offerData.user.surname}}</span>
-            <div class="card-description__skill">{{offerData.user.rank_id}}</div>
-          </div>
-        </div>
-
-        <p class="card-description__about">{{offerData.description}}</p>
-        <div class="card-description__bottom">
-          <div class="card-description__level">{{offerData.rating}}</div>
-          <div class="card-description__comments"><a>({{offerData.comments_count}} отзывов)</a></div>
-        </div>
-
-      </div>
-      <div class="card-bottom">
-        <div class="card-bottom__like"></div>
-        <div class="card-bottom__price">
-          начиная от
-          <span>500 ₴ </span>
-        </div>
-      </div>
-
-    </div>
-    <div class="card" >
-      <div class="card-preview__bg">
-        <img class="card-preview"  [src]="'https://www.thecubetest.site/Backend/storage/app/' + offerData.mainImage">
-      </div>
-      <div class="card-description">
-
-        <div class="card-description__top">
-          <div class="card-description__ava"><img *ngIf="offerData.user.avatar" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offerData.user.avatar" alt="avatar">
-          </div>
-          <div>
-            <span class="card-description__name" >{{offerData.user.name}} {{offerData.user.surname}}</span>
-            <div class="card-description__skill">{{offerData.user.rank_id}}</div>
-          </div>
-        </div>
-
-        <p class="card-description__about">{{offerData.description}}</p>
-        <div class="card-description__bottom">
-          <div class="card-description__level">{{offerData.rating}}</div>
-          <div class="card-description__comments"><a>({{offerData.comments_count}} отзывов)</a></div>
-        </div>
-
-      </div>
-      <div class="card-bottom">
-        <div class="card-bottom__like"></div>
-        <div class="card-bottom__price">
-          начиная от
-          <span>500 ₴ </span>
-        </div>
-      </div>
-
-    </div>
-    <div class="card" >
-      <div class="card-preview__bg">
-        <img class="card-preview"  [src]="'https://www.thecubetest.site/Backend/storage/app/' + offerData.mainImage">
-      </div>
-      <div class="card-description">
-
-        <div class="card-description__top">
-          <div class="card-description__ava"><img *ngIf="offerData.user.avatar" [src]="'https://www.thecubetest.site/Backend/storage/app/' + offerData.user.avatar" alt="avatar">
-          </div>
-          <div>
-            <span class="card-description__name" >{{offerData.user.name}} {{offerData.user.surname}}</span>
-            <div class="card-description__skill">{{offerData.user.rank_id}}</div>
-          </div>
-        </div>
-
-        <p class="card-description__about">{{offerData.description}}</p>
-        <div class="card-description__bottom">
-          <div class="card-description__level">{{offerData.rating}}</div>
-          <div class="card-description__comments"><a>({{offerData.comments_count}} отзывов)</a></div>
-        </div>
-
-      </div>
-      <div class="card-bottom">
-        <div class="card-bottom__like"></div>
-        <div class="card-bottom__price">
-          начиная от
-          <span>500 ₴ </span>
-        </div>
-      </div>
-
-    </div>
   </div>
-</section> -->
+</section>
