--- a/src/app/chat/components/messager/messager.component.html
+++ b/src/app/chat/components/messager/messager.component.html
@@ -10,8 +10,10 @@
 <div class="messager-wrap">
 
   <div class="previous-massages">
-    <div>1</div>
-    <div>2</div>
+    <div >1</div>
+    <div class="users-message">
+
+    </div>
     <div>3</div>
     <div>4</div>
   </div>
