--- a/src/app/chat/components/collocutors-list/collocutors-list.component.html
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.html
@@ -1,4 +1,5 @@
-<section class="inform">
+<div class="wrapper">
+  <section class="inform">
   Все сообщения <span>(1250)</span>
 </section>
 <section class="collocutors-wrap">
@@ -9,7 +10,7 @@
 
   </div>
   <div class="collocutors-list" >
-    <div class="collocutor" *ngFor="let i of [0,1,2,3,4,5,6,7,8,9]">
+    <div class="collocutor" *ngFor="let i of [0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]">
       <p class="date">Вчера 22:30</p>
       <div class="message-preview">
         <div class="photo">
@@ -26,3 +27,5 @@
     </div>
   </div>
 </section>
+</div>
+
