--- a/src/app/chat/components/collocutors-list/collocutors-list.component.scss
+++ b/src/app/chat/components/collocutors-list/collocutors-list.component.scss
@@ -1,9 +1,17 @@
+.wrapper {
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 .collocutors-wrap {
   font-family: Source Sans Pro, sans-serif;
   padding: 20px 0 0 20px;
   position: relative;
-
-
+  overflow: hidden;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
 
 .collocutors-serch {
@@ -29,6 +37,7 @@
     width: 100%;
     padding-bottom: 7px;
     // padding-left: 40px;
+    outline: none;
   }
 
 }
