--- a/src/app/chat/components/messager/messager.component.scss
+++ b/src/app/chat/components/messager/messager.component.scss
@@ -13,12 +13,13 @@
   align-items: center;
   flex-direction: column;
   .previous-massages{
-    height: 79%;
+    height: 90%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: left;
     align-items: left;
+    overflow: auto;
   }
   .message-input {
     box-shadow: 0px 15px 30px rgba(16, 27, 79, 0.15);
@@ -26,8 +27,8 @@
     height: 10%;
     width: 95%;
     // padding: 20px;
-    position: relative;
-    bottom: 0;
+    position: absolute;
+    bottom: 23px;
     .tools {
       width: 140px;
       height: 20px;
@@ -46,6 +47,7 @@
         resize: none;
         width: 100%;
         height: 60px;
+
       }
     }
 
