--- a/src/app/dashboard-page/dashboard-page.component.scss
+++ b/src/app/dashboard-page/dashboard-page.component.scss
@@ -231,10 +231,31 @@
       &:hover {
         background-color: rgb(250, 249, 249);
       }
+      &.active.chat {
+        background: #3C7EEA;
+        box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
+        border-radius: 8px;
+        color: #fff;
+        &:before {
+          color: #3C7EEA;
+          background-color: #fff;
+        }
+        span {
+          color: #fff;
+        }
+      }
       &.active {
         background: #3C7EEA;
         box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
         border-radius: 8px;
+        color: #fff;
+        &:before {
+          background-color: #3C7EEA;
+          color: #fff;
+        }
+        span {
+          color: #fff;
+        }
       }
       span {
         font-family: Source Sans Pro, sans-serif;
