--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.html
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.html
@@ -19,12 +19,25 @@
       <section  class="submit">
 
         <button  mat-button  type="submit" mat-raised-button>
-            Сбросить пароль
+            
         </button>
 
 
       </section >
   </form>
+<!-- 
+  <form  #form="ngForm" (ngSubmit)="ResetPass(form)">
+    <div class="form-group">
+      <input type="email" placeholder="E-mail Address" id="email" [(ngModel)]="email" emailvalidator name="email" required #emailField="ngModel">
+      <div class="form-controll-feedback" *ngIf="emailField.errors && (emailField.dirty || emailField.touched)">
+        <p *ngIf="emailField.errors.required">Введите email</p>
+        <p *ngIf="emailField.errors.emailvalidator">Не корректный email</p>
+      </div>
+    </div>
+    <button class="btn" type="submit" [disabled]="form.invalid">
+      Сбросить пароль
+    </button>
+  </form> -->
   </div>
 
 </div>
