--- a/src/app/authorization-page/authentification-page/authentification-page.component.scss
+++ b/src/app/authorization-page/authentification-page/authentification-page.component.scss
@@ -389,6 +389,9 @@
       box-sizing: border-box;
       font-family: "Source Sans Pro", sans-serif;
       color: #707683;
+      .pass {
+        padding: 0 44px 0 14px;
+      }
     }
 
 
