--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
@@ -79,6 +79,14 @@ input {
   }
 }
 
+.show-pass {
+  position: absolute;
+  cursor: pointer;
+  right: 8px;
+  top: 17px;
+  font-size: 25px;
+}
+
 .social-login {
   margin: 50px 0 36px;
   text-align: center;
