--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.scss
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.scss
@@ -187,7 +187,8 @@ form {
       color: #707683;
       height: 49px;
       margin-top: 8px;
-      padding-left: 12px;
+      // padding-left: 12px;
+      padding-right: 20px;
       // width: 300px;
     }
 
@@ -238,9 +239,9 @@ form {
   }
 
   button {
-    background: #3C7EEA;
+    // background: #3C7EEA;
     border-radius: 0px 8px 8px 0px;
     padding: 8px 22px;
-    color: #fff;
+    // color: #fff;
   }
 }
