--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/main-user-settings/main-user-settings.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/main-user-settings/main-user-settings.component.scss
@@ -195,7 +195,8 @@
 }
 
 .birthday-block{
-  margin-bottom: 40px;
+  max-width: 630px;
+  margin-bottom: 30px;
 }
 .about_me-block{
   max-width: 630px;
