--- a/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/birthday-user-settings/birthday-user-settings.component.html
+++ b/src/app/dashboard-page/dashboard-pages/user-settings-dashboard/components/user-settings-dashboard/general-user-settings/birthday-user-settings/birthday-user-settings.component.html
@@ -1,25 +1,21 @@
 <div class="data">
   <div class="day">
-    <select name="day"  [(ngModel)]="userSettingsModel.birthDay.day" (ngModelChange)="filterChanhe()">
+    <mat-select name="day"  [(ngModel)]="userSettingsModel.birthDay.day" (ngModelChange)="filterChanhe()">
       <ng-container *ngFor="let day of days, let i = index">
-        <option [value]="day" *ngIf="(i+1) <=  maxDays">{{ day }}</option>
-
-
+        <mat-option [value]="day" *ngIf="(i+1) <= maxDays">{{ day }}</mat-option>
       </ng-container>
-    </select>
-
-    {{maxDays}}
+    </mat-select>
   </div>
   <div class="mounth">
-    <select name="month" id=""  [(ngModel)]="userSettingsModel.birthDay.month" (ngModelChange)="filterChanhe()">
+    <mat-select name="month" id=""  [(ngModel)]="userSettingsModel.birthDay.month" (ngModelChange)="filterChanhe()">
       <ng-container *ngFor="let month of mounth, let i = index">
-        <option [value]="month">{{ month }}</option>
+        <mat-option [value]="month">{{ month }}</mat-option>
       </ng-container>
-    </select>
+    </mat-select>
   </div>
   <div class="year" >
-    <select name="year" id="" [(ngModel)]="userSettingsModel.birthDay.year" (ngModelChange)="filterChanhe()" >
-      <option [value]="year" *ngFor="let year of createArrayYear()">{{ year }}</option>
-    </select>
+    <mat-select name="year" id="" [(ngModel)]="userSettingsModel.birthDay.year" (ngModelChange)="filterChanhe()" >
+      <mat-option [value]="year" *ngFor="let year of createArrayYear()">{{ year }}</mat-option>
+    </mat-select>
   </div>
 </div>
