--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.html
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.html
@@ -5,39 +5,20 @@
 
   <div class="wrapper">
     <h2>Восстановление пароля</h2>
-    <form #form="ngForm" [formGroup]="resetPass" (ngSubmit)="ResetPass()">
 
-      <mat-form-field appearance="legacy">
-          <mat-label>Введите e-mail</mat-label>
-        <input matInput type="email" name="email" placeholder="E-mail Address"  formControlName="email" required>
-
-        <mat-error *ngIf="resetPass.get('email').hasError('required')">{{ "Введите email" }}</mat-error>
-        <mat-error *ngIf="resetPass.get('email').hasError('email')">{{
-              "Не корректный email"
-            }}</mat-error>
-      </mat-form-field>
-      <section  class="submit">
-
-        <button  mat-button  type="submit" mat-raised-button>
-            
-        </button>
-
-
-      </section >
-  </form>
-<!-- 
-  <form  #form="ngForm" (ngSubmit)="ResetPass(form)">
+    <form  #form="ngForm" [formGroup]="resetPass" (ngSubmit)="ResetPass()">
     <div class="form-group">
-      <input type="email" placeholder="E-mail Address" id="email" [(ngModel)]="email" emailvalidator name="email" required #emailField="ngModel">
-      <div class="form-controll-feedback" *ngIf="emailField.errors && (emailField.dirty || emailField.touched)">
-        <p *ngIf="emailField.errors.required">Введите email</p>
-        <p *ngIf="emailField.errors.emailvalidator">Не корректный email</p>
+      <label for="email">Введите e-mail</label>
+      <input type="email" placeholder="E-mail Address" id="email" formControlName="email" emailvalidator name="email" required >
+      <div class="form-controll-feedback" *ngIf="resetPass.get('email').invalid">
+        <p *ngIf="resetPass.get('email').hasError('required') && submitted">Введите email</p>
+        <p *ngIf="resetPass.get('email').invalid && submitted">Не корректный email</p>
       </div>
     </div>
     <button class="btn" type="submit" [disabled]="form.invalid">
       Сбросить пароль
     </button>
-  </form> -->
+  </form>
   </div>
 
 </div>
