--- a/src/app/authorization-page/reset-password-page/reset-password-page.component.scss
+++ b/src/app/authorization-page/reset-password-page/reset-password-page.component.scss
@@ -25,8 +25,10 @@
     font-weight: bold;
     font-size: 36px;
     line-height: 72px;
-    color: #323C47;
+    color: #323c47;
     margin-bottom: 93px;
+    margin-top: 0;
+    text-align: center;
   }
 }
 
@@ -35,213 +37,68 @@ form {
   flex-direction: row;
   font-family: "Source Sans Pro", sans-serif;
   align-items: center;
+  .form-group {
+    border: 1px solid rgba(220, 224, 230, 0.9);
+    width: 300px;
+    padding: 0 12px;
+    position: relative;
+    .form-controll-feedback {
+      position: absolute;
+      left: 0;
+      p {
+        font-family: Source Sans Pro, sans-serif;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 13px;
+        line-height: 16px;
+        color: #FD1F3A;
+        margin: 0;
+        padding: 2px 0;
+      }
+    }
+  }
 
   ::ng-deep {
-    .mat-form-field-infix {
-      width: 300px;
-    }
-
-    .mat-form-field {
-      width: 100%;
-      // position: relative;
-    }
-
-    .mat-form-field-underline {
-      display: none;
-    }
-
-    .mat-warn .mat-input-element,
-    .mat-form-field-invalid .mat-input-element {
-      border: 1px solid red;
-    }
-    .mat-form-field-appearance-legacy .mat-form-field-subscript-wrapper {
-      margin-top: -3px;
-      padding-left: 10px;
-    }
-
-    .pass-erorrs {
-      // z-index: -20;
-      display: none;
-    }
-
-    .mat-focused {
-      .pass-erorrs {
-        width: 100%;
-        margin-top: 5px;
-        background: #ffffff;
-        background: #ffffff;
-        border-radius: 0px 0px 8px 8px;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        flex-wrap: wrap;
-        position: relative;
-        z-index: 3;
-        padding: 2px 0 9px;
-        span {
-          width: 19%;
-          border-radius: 2px;
-          height: 5px;
-          &.unvalidated {
-            background: rgba(100, 154, 243, 0.4);
-            order: 1;
-          }
-
-          &.validated {
-            background: #649af3;
-          }
-        }
-      }
-
-      .description {
-        width: 100%;
-        order: 3;
-        padding-left: 15px;
-        margin: 0;
-        position: absolute;
-        top: 20px;
-        box-shadow: 0px 15px 21px rgba(128, 152, 213, 0.25);
-        background: #fff;
-
-        li {
-          list-style: none;
-          margin: 8px 0 0;
-          font-family: "Source Sans Pro", sans-serif;
-          font-style: normal;
-          font-weight: 600;
-          font-size: 13px;
-          line-height: 16px;
-          color: #4285f4;
-          padding: 0 15px;
-          position: relative;
-
-          &:last-of-type {
-            margin-bottom: 12px;
-          }
-
-          &:before {
-            position: absolute;
-            content: "";
-            left: 0;
-            top: 50%;
-            transform: translateY(-50%);
-            width: 4px;
-            height: 4px;
-            border-radius: 50%;
-            -webkit-border-radius: 50%;
-            -moz-border-radius: 50%;
-            -ms-border-radius: 50%;
-            -o-border-radius: 50%;
-            background: #4285f4;
-            -webkit-transform: translateY(-50%);
-            -moz-transform: translateY(-50%);
-            -ms-transform: translateY(-50%);
-            -o-transform: translateY(-50%);
-          }
-        }
-      }
-
-
-      &.mat-form-field .mat-form-field-label {
-        // padding-left: 0;
-      }
-
-      .mat-form-field-label-wrapper {
-        line-height: normal;
-      }
-    }
-    .mat-form-field-invalid .mat-form-field-label {
-      // padding-left: 0;
-    }
-    .ng-valid {
-      &.mat-form-field .mat-form-field-label {
-        // padding-left: 0;
-      }
-      .mat-form-field-label-wrapper {
-        line-height: normal;
-      }
-    }
-    .controls,
-    .policy {
-      label {
-        // padding: 0;
-      }
-    }
     label {
-      line-height: 64px;
-      padding: 0 14px;
-      font-family: "Source Sans Pro", sans-serif;
+      font-family: Source Sans Pro, sans-serif;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 14px;
+      line-height: 18px;
       color: #99acb7;
-      font-size: 17.5px;
-      font-weight: 400;
-    }
- .mat-form-field-appearance-legacy.mat-form-field-can-float.mat-form-field-should-float
-      .mat-form-field-label {
-      line-height: normal;
+      position: absolute;
+      left: 0;
+    top: -21px;
     }
     input {
-      border: 1px solid rgba(220, 224, 230, 0.9);
+      border: none;
       font-weight: 400;
       font-size: 16px;
       line-height: 21px;
       color: #707683;
       height: 49px;
-      margin-top: 8px;
+      background-color: transparent;
+      // margin-top: 8px;
       // padding-left: 12px;
-      padding-right: 20px;
-      // width: 300px;
-    }
-
-    .mat-form-field-label-wrapper {
-      line-height: 65px;
-
-
-    }
-
-    .mat-form-field .mat-form-field-label {
-      padding-left: 12px;
-    }
-
-    .mat-focused {
-      &.mat-form-field .mat-form-field-label {
-        // padding-left: 0;
-
-
+      // padding-right: 20px;
+      width: 100%;
+      background: transparent;
+      outline: none;
+      &:placeholder {
+        color: #707683;
       }
-      .mat-form-field-label-wrapper {
-        line-height: normal;
-
-
-      }
-      label {
-        line-height: 44px;
-        padding: 0 14px;
-        font-family: "Source Sans Pro", sans-serif;
-        color: #99acb7;
-        font-size: 17.5px;
-        font-weight: 400;
-      }
-    }
-    .ng-valid {
-        &.mat-form-field .mat-form-field-label {
-            // padding-left: 0;
-          }
-        .mat-form-field-label-wrapper {
-            line-height: normal;
-          }
-    }
-
-
-
-    .mat-form-field-underline {
-      display: none;
+    //   &:-internal-autofill-selected {
+    //     background-color: rebeccapurple !important;
+    //     background-image: none !important;
+    //     color: rgb(0, 0, 0) !important;
+    // }
     }
   }
 
   button {
     // background: #3C7EEA;
     border-radius: 0px 8px 8px 0px;
-    padding: 8px 22px;
+    // padding: 8px 22px;
     // color: #fff;
   }
 }
