--- a/src/app/authorization-page/set-new-pass/set-new-pass.component.html
+++ b/src/app/authorization-page/set-new-pass/set-new-pass.component.html
@@ -1,6 +1,6 @@
 <div class="registration-bl">
         <div class="nav-menu">
-                <app-main-header [pageName]="'authoriz'"></app-main-header>
+            <app-main-header [pageName]="'authoriz'"></app-main-header>
             </div>
   <div class="container">
     <div class="row">
@@ -59,7 +59,7 @@
         </mat-form-field>
         <section class="submit">
           <button mat-button type="submit" mat-raised-button>
-            Войти
+            Сохранить
           </button>
         </section>
       </form>
