--- a/src/app/shared/modules/main-header/main-header.component.scss
+++ b/src/app/shared/modules/main-header/main-header.component.scss
@@ -84,3 +84,13 @@ nav {
     text-decoration: none;
   }
 }
+
+.reset-pass {
+  display: flex;
+  align-items: center;
+  button {
+    margin-left: 30px;
+    padding: 0 10px;
+    height: 30px;
+  }
+}
