--- a/src/app/authorization-page/authentification-page/login-page/login-page.component.html
+++ b/src/app/authorization-page/authentification-page/login-page/login-page.component.html
@@ -32,7 +32,7 @@
 
           <section  class="submit">
 
-            <button class="btn" type="submit"  [disabled]="loginForm.invalid">
+            <button class="btn" type="submit"  >
                 Войти
             </button>
 
