--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.html
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.html
@@ -61,7 +61,10 @@
             <mat-checkbox class="controls" required  class="policy" formControlName="agreed">Я согласен(а) с <span>Политикой конфиденциальности</span></mat-checkbox>
         </section>
         <section  class="submit">
-            <button [style.background-color]="!registrationForm.valid? 'gray': '#3c7eea'" mat-button [disabled]="registrationForm.invalid"  type="submit" mat-raised-button>
+            <!-- <button [style.background-color]="!registrationForm.valid? '#c2cfe0': '#3c7eea'" mat-button [disabled]="registrationForm.invalid"  type="submit" mat-raised-button>
+                Зарегистрироваться
+            </button> -->
+            <button class="btn" type="submit"  [disabled]="registrationForm.invalid">
                 Зарегистрироваться
             </button>
         </section >
