--- a/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
+++ b/src/app/authorization-page/authentification-page/registration-page/registration-page.component.scss
@@ -143,14 +143,15 @@ input {
 .submit {
   text-align: center;
   font-family: "Source Sans Pro", sans-serif;
-  margin-top: 24px;
+  margin: 24px auto 0;
+
   button {
     padding: 13px 73px;
     color: #ffffff;
     font-size: 16px;
     font-weight: 700;
-    background: #3C7EEA;
-    box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
+    // background: #3C7EEA;
+    // box-shadow: 0px 10px 20px rgba(80, 123, 252, 0.5);
     border-radius: 8px;
     font-family: "Source Sans Pro", sans-serif;
   }
